<resources>
    <string name="app_name">Quản lý quán lẩu Trùng Khánh</string>

    <string name="email">Email</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="nhan_vien">Nhân viên</string>
    <string name="quan_ly">Quản lý</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="thoat">Thoát</string>
    <string name="admin_capslock">ADMIN</string>
    <string name="nhan_vien_capslock">NHÂN VIÊN</string>
    <string name="mon_an_capslock">MÓN ĂN</string>
    <string name="ban_capslock">BÀN</string>
    <string name="dat_ban_capslock">ĐẶT BÀN</string>
    <string name="thanh_toan_capslock">THANH TOÁN</string>
    <string name="ban_so_capslock">BÀN SỐ</string>
    <string name="loai_ban_capslock">LOẠI BÀN</string>
    <string name="voucher_capslock">VOUCHER</string>
    <string name="thay_doi_email">Thay đổi email</string>
    <string name="nhap_email_moi">Nhập email mới</string>
    <string name="them_admin">Thêm admin</string>
    <string name="them_ban">Thêm bàn</string>
    <string name="them_mon">Thêm món</string>
    <string name="them_so_luong">Thêm số lượng</string>
    <string name="sua_so_luong">Sửa số lượng</string>
    <string name="them">Thêm</string>
    <string name="sua_mon">Sửa món</string>
    <string name="them_nhan_vien">Thêm nhân viên</string>
    <string name="nhap_email">Nhập email</string>
    <string name="nhap_ten_mon">Nhập tên món</string>
    <string name="nhap_so_luong">Nhập số lượng</string>
    <string name="nhap_sl">Nhập SL</string>
    <string name="sl">SL:</string>
    <string name="nhap_gia">Nhập giá</string>
    <string name="chon_tag">#chontag</string>
    <string name="nhap_ma_ban">Nhập mã bàn</string>
    <string name="trang_thai">Trạng thái</string>
    <string name="ds_yeu_cau">Ds yêu cầu</string>
    <string name="dang_hoat_dong">Đang hoạt động</string>
    <string name="dang_trong">Đang trống</string>
    <string name="dang_bao_tri">Đang bảo trì</string>
    <string name="da_dat_truoc">Đã đặt trước</string>
    <string name="cho_thanh_toan">Chờ thanh toán</string>
    <string name="lua_chon">Lựa chọn</string>
    <string name="nhap_loai_ban">Nhập loại bàn(số chỗ ngồi)</string>
    <string name="nhap_mat_khau">Nhập mật khẩu</string>
    <string name="nhap_tuoi">Nhập tuổi</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="nhap_cmtnd">Nhập CMTND</string>
    <string name="nhap_lai_mat_khau">Nhập lại mật khẩu</string>
    <string name="nhap_ho_ten">nhập họ tên</string>
    <string name="nhap_sdt">Nhập SĐT</string>
    <string name="chup_anh">Chụp ảnh</string>
    <string name="chon_anh">Chọn ảnh</string>
    <string name="ho_ten_detail">Họ tên:</string>
    <string name="email_detail">Email:</string>
    <string name="ngay_tao_detail">Ngày tạo:</string>
    <string name="tuoi_detail">Tuổi :</string>
    <string name="matkhau_detail">Mật khẩu:</string>
    <string name="dia_chi_detail">Địa chỉ:</string>
    <string name="ten_mon_detail">Tên món:</string>
    <string name="so_luong_detail">Số lượng:</string>
    <string name="gia_detail">Giá:</string>
    <string name="trang_thai_detail">Trạng thái:</string>
    <string name="sua_tag">Sửa tag</string>
    <string name="cmtnd_detail">CMTND :</string>
    <string name="sdt_detail">SĐT :</string>
    <string name="trang_thai_tam_dung">Tạm dừng</string>
    <string name="trang_thai_hoat_dong">Hoạt động</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiêt</string>
    <string name="trang_thai_tai_khoan_detail">Trạng thái tài khoản :</string>
    <string name="ban_chua_cap_quyen_camera">Bạn chưa cấp quyền {CAMERA}</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="sua_ban">Sửa bàn</string>
    <string name="thay_doi_mat_khau">Thay đổi mật khẩu</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="thay_doi">Thay đổi</string>
    <string name="gioi_thieu">Thiết kế bởi Hoàng Văn Nam - Quản lý quán lẩu Trùng Khánh</string>
    <string name="thanh_toan">Thanh toán</string>
    <string name="huy_thanh_toan">Hủy thanh toán</string>
    <string name="thong_ke">Thống kê</string>
    <string name="dat_ban">Đặt bàn</string>
    <string name="goi_mon">Gọi món</string>
    <string name="doi_ban">Đổi bàn</string>
    <string name="gia">Giá</string>
    <string name="con">Còn</string>
    <string name="het">Hết</string>
    <string name="sua_email">Sửa Email</string>
    <string name="sua_thongtin">Sửa thông tin</string>
    <string name="sua_mat_khau">Sửa mật khẩu</string>
    <string name="sua_thong_tin_nhan_vien">Sửa thông tin nhân viên</string>
    <string name="doi_anh_dai_dien">Đổi ảnh đại diện</string>
    <string name="doi_anh">Đổi ảnh</string>
    <string name="xoa">Xóa</string>
    <string name="xoa_ban">Xóa bàn</string>
    <string name="tag_do_an">#doan</string>
    <string name="hoa_don_capslock">HÓA ĐƠN</string>
    <string name="tag_do_uong">#douong</string>
    <string name="tag_hoa_qua">#hoaqua</string>
    <string name="trang_thai_chua_hoan_thanh">unfinished</string>
    <string name="trang_thai_cho_xy_ly">pending</string>
    <string name="do_an">Đồ ăn</string>
    <string name="id_detail">ID :</string>
    <string name="ban_detail">Bàn :</string>
    <string name="tong_detail">Tổng :</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="danh_sach_mon_detail">Danh sách món :</string>
    <string name="dang_cho_thanh_toan">Chờ thanh toán</string>
    <string name="do_uong">Đồ uống</string>
    <string name="hoa_qua">Hoa quả</string>

    <!--notification-->
    <string name="khong_internet">Không có internet !</string>
    <string name="loi_dang_nhap">Lỗi đăng nhập !</string>
    <string name="loi_anh">Lỗi ảnh !</string>
    <string name="xoa_taikhoan">Xóa tài khoản</string>
    <string name="chua_thanh_toan">Chưa thanh toán</string>
    <string name="da_thanh_toan">Đã thanh toán</string>
    <string name="co">Có</string>
    <string name="loi">Lỗi</string>
    <string name="them_ban_thanh_cong">Thêm bàn thành công !</string>
    <string name="them_mon_thanh_cong">Thêm món thành công !</string>
    <string name="sua_ban_thanh_cong">Sửa bàn thành công !</string>
    <string name="doi_ban_thanh_cong">Đổi bàn thành công !</string>
    <string name="sua_mon_thanh_cong">Sửa món thành công !</string>
    <string name="da_chuyen_sang_cho_thanh_toan">Đã chuyển sang chờ thanh toán !</string>
    <string name="khong">Không</string>
    <string name="dat_ban_thanh_cong">Đặt bàn thành công !</string>
    <string name="tao_hoa_don_thanh_cong">Tạo hóa đơn thành công !</string>
    <string name="xoa_thanhcong">Xóa thành công !</string>
    <string name="sua_thanhcong">Sửa thành công !</string>
    <string name="xoa_thatbai">Xóa thất bại !</string>
    <string name="ban_cochac_muon_xoakhong">Bạn có chắc muốn xóa không ?</string>
    <string name="ban_cochac_muon_thaydoi_khong">Bạn có chắc muốn thay đổi không ?</string>
    <string name="khongthe_datban_do_dangsua_hoac_dang_hoatdong">Không thể đặt bàn do đang sửa hoặc đang hoạt động !</string>
    <string name="khongthe_datmon_do_chua_datban">Không thể đặt món do chưa đặt bàn !</string>
    <string name="ban_chua_dat_ban">Bạn chưa đặt bàn !</string>
    <string name="ban_chua_chon_ban">Bạn chưa chọn bàn !</string>
    <string name="ban_khong_duoc_trung_nhau">Bàn không được trùng nhau !</string>
    <string name="soluong_phai_lonhon_0">Số lượng phải lớn hơn 0 !</string>
    <string name="taikhoan_admin_khongthe_dangnhap_vao_nhanvien">Tài khoản admin không thể đăng nhập vào nhân viên !</string>
    <string name="dangnhap_thanhcong">Đăng nhập thành công !</string>
    <string name="ban_chuaduoc_cap_quyen">Bạn chưa được cấp quyền !</string>
    <string name="ban_chuanhap_matkhau_moi">Bạn chưa nhập mật khẩu mới !</string>
    <string name="ban_chuanhap_email_moi">Bạn chưa nhập email mới !</string>
    <string name="matkhau_da_đuoc_doi_vuilong_dangnhap_lai">Mật khẩu đã được thay đổi, vui lòng đăng nhập lại !</string>
    <string name="email_da_đuoc_doi_vuilong_dangnhap_lai">Email đã được thay đổi, vui lòng đăng nhập lại !</string>
    <string name="tao_taikhoan_thanhcong">Tạo tài khoản thành công !</string>
    <string name="tao_taikhoan_khong_thanhcong">Tạo tài khoản không thành công !</string>
    <string name="dodai_matkhau_lonhon_5">Độ dài mật khẩu phải lớn hơn 5 !</string>
    <string name="khong_de_trong">Không được để trống !</string>
    <string name="xacnhan_matkhau_lai_khongdung">Xác nhận mật khẩu lại không đúng !</string>
    <string name="ban_muon_xoa_taikhoan">Bạn có chắc muốn xóa tài khoản này ?</string>
    <string name="email_matkhau_sai">Email hoặc mật khẩu không đúng !</string>
    <string name="email_matkhau_trong">Email hoặc mật khẩu trống !</string>
    <string name="title_activity_food">MainActivity</string>
    <string name="ban_chua_chon_tag">Bạn chưa chọn tag !</string>
    <string name="khongduoc_nhohon_hoac_bang_0">Không được nhỏ hơn hoặc bằng 0 !</string>
    <string name="khongduoc_nhohon_0">Không được nhỏ hơn 0 !</string>
    <string name="khongduoc_lonhon_soluong_dangco">Không được lớn hơn số lượng đang có !</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>