<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:text="@string/them_admin"
        android:background="@color/orange"/>

    <LinearLayout
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtAddEmailAdmin"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/orange"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColorHint="@color/orange"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhap_email"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtAddPassword"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/orange"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColorHint="@color/orange"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhap_mat_khau"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtConfirmPasswordAdmin"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/orange"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColorHint="@color/orange"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhap_lai_mat_khau"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtAddNameAdmin"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/orange"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColorHint="@color/orange"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhap_ho_ten"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtAddPhonetAdmin"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/orange"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColorHint="@color/orange"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nhap_sdt"/>

        <Button
            android:id="@+id/btnAddAdmin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:text="@string/them_admin" />

        <Button
            android:id="@+id/btnQuitDiaLogAddAdmin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:text="@string/thoat" />
    </LinearLayout>

</LinearLayout>